# phoenix_training

hypervisor/: package.xml  readme.md  requirements.txt  setup.cfg  setup.py
hypervisor/config/neural_net/: fusion_jaerock_jaerock2.yaml
hypervisor/hypervisor/: hypervisor.py
hypervisor/neural_net/: config.py  drive_train.py  gpu_options.py  net_model.py
phoenix_training/: CMakeLists.txt  package.xml
phoenix_training/launch/: README.md  training.launch.py
phoenix_training/launch/include/run_mgr/: run_mgr.launch.py
run_mgr/: CMakeLists.txt  README.md  package.xml  run_mgr.doctor.toml
run_mgr/include/run_mgr/: run_mgr_node.hpp  score_mgr.hpp
run_mgr/src/: run_mgr.cpp  run_mgr_node.cpp
run_mgr/tests/: unit.cpp
